syntax = "proto3";

package io.harness.callback;

option java_multiple_files = true;
option go_package = "22_delegate_service_beans";

import "22-delegate-service-beans/src/main/proto/io/harness/callback/http_entrypoint.proto";
import "22-delegate-service-beans/src/main/proto/io/harness/callback/mongodb.proto";

message DelegateCallbackToken {
  string token = 1;
}

message DelegateCallback {
  oneof type {
    HttpsClientEntrypoint https_client_entrypoint = 1;
    MongoDatabase mongo_database = 2;
  }
}